--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,21 @@
 .DS_Store
 __pycache__
 env
-tests/__pycache__
+*/__pycache__
+
+inputs/Data_vs_Model_HON_19970101_20221231.txt
+inputs/HON_POMME_Input.txt
+inputs/HON_POMME_inputs_fyear.txt
+inputs/cloud_data_inputs_*.txt
+
+Martin_text_files_with_GSM_fields/
+inputs/column_def.txt
+results/global_RMSE_20150317.txt
+results/global_RMS_20150317.csv
+results/global_RMS_20150623.txt
+results/global_RMS_20170908.txt
+results/pomme_calc_ext_results.txt
+results/pomme_calc_gsm_results.txt
+results/pomme_calc_sm_results.txt
+results/pomme_rt_results.txt
+test_hon_pom.sh
