--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,17 @@
 __pycache__
 env
 */__pycache__
+.idea/
+
+
+remove_file_fromGit.sh
+tmp.txt
 
 inputs/Data_vs_Model_HON_19970101_20221231.txt
 inputs/HON_POMME_Input.txt
 inputs/HON_POMME_inputs_fyear.txt
 inputs/cloud_data_inputs_*.txt
+ inputs/pomme_inputs_50.txt
 
 Martin_text_files_with_GSM_fields/
 inputs/column_def.txt
@@ -20,3 +26,19 @@ results/pomme_calc_sm_results.txt
 results/pomme_rt_results.txt
 results/global/*/data*.csv
 
+
+results/ASC/
+results/ASP/
+results/BSL/
+results/CLF/
+results/FRN/
+results/GUA/
+results/HAD/
+results/HBK/
+results/HON/
+results/HYB/
+results/KAK/
+results/KOU/
+results/PHU/
+results/PPT/
+results/SPT/
